# signatures

./: .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: precommit.yml
signatures/: __init__.py  py.typed
tests/: test_signatures.py
