[tool.poetry]
name = "signatures"
version = "0.3.1"
description = "Utilities for inspecting and comparing Python function signatures."
authors = ["Joseph Hale <me@jhale.dev>"]
license = "MPL-2.0"
readme = "README.md"
homepage = "https://github.com/thehale/signatures"
repository = "https://github.com/thehale/signatures"
documentation = "https://github.com/thehale/signatures"
keywords = [ "introspection", "signatures", "functions", "validation" ]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.2,<9.0"
pre-commit = ">=2.20,<4.0"
liccheck = ">=0.8,<0.10"
mypy = ">=0.991,<1.10"
black = ">=22.12,<25.0"

[tool.liccheck]
authorized_licenses = [
    "MIT",
    "Apache-2.0",
    "Apache Software",
    "Apache License, Version 2.0",
    "Apache License 2.0",
    "BSD",
    "BSD-2-Clause",
    "BSD-3-Clause",
    "LGPL-2.1",
    "LGPL-3.0",
    "MPL-2.0",
    "Mozilla Public License 2.0 (MPL 2.0)",
    "Unlicense"
]
unauthorized_licenses = [
    "GPL",
    "GNU General Public License v2 (GPLv2)"
]

[tool.liccheck.authorized_packages]
# None right now.

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
