[tool.poetry]
name = "signatures"
version = "0.3.1"
description = "Utilities for inspecting and comparing Python function signatures."
authors = ["Joseph Hale <me@jhale.dev>"]
license = "MPL-2.0"
readme = "README.md"
homepage = "https://github.com/thehale/signatures"
repository = "https://github.com/thehale/signatures"
documentation = "https://github.com/thehale/signatures"
keywords = [ "introspection", "signatures", "functions", "validation" ]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.2,<9.0"
pre-commit = ">=2.20,<4.0"
mypy = ">=0.991,<1.15"
black = ">=22.12,<25.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
